--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "byted-apaas-utils",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "飞书应用引擎工具函数",
   "main": "cjs/index.js",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
   "files": [
-    "./src",
+    "./dist",
+    "./cjs",
+    "./esm",
     "./README.md"
   ],
   "keywords": [
