--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "byted-apaas-utils",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "飞书应用引擎工具函数",
-  "main": "cjs/index.js",
-  "module": "esm/index.js",
-  "types": "esm/index.d.ts",
+  "main": "./cjs/index.js",
+  "types": "./esm/index.d.ts",
+  "module": "./esm/index.js",
   "files": [
     "./dist",
     "./cjs",
@@ -29,6 +29,7 @@
     "@babel/core": "^7.23.5",
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-typescript": "^7.23.3",
+    "@microsoft/api-extractor": "^7.39.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.1",
@@ -39,6 +40,7 @@
     "rimraf": "^5.0.5",
     "rollup": "^4.6.1",
     "rollup-plugin-dts": "^6.1.0",
+    "tsup": "^8.0.1",
     "typescript": "^5.3.2"
   }
 }
