--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "byted-apaas-utils",
-  "version": "0.0.21",
+  "version": "0.0.23",
   "description": "飞书应用引擎工具函数",
   "main": "./cjs/index.js",
   "types": "./esm/index.d.ts",
@@ -18,32 +18,20 @@
     "apaas"
   ],
   "scripts": {
-    "rollup:watch": "rollup -w -c",
-    "ts:watch": "tsc -w -p tsconfig.esm.json & tsc -w -p tsconfig.cjs.json",
-    "watch": "npm run rollup:watch & npm run ts:watch",
-    "build": "rimraf esm && rimraf cjs && rimraf dist && tsc -p tsconfig.esm.json && tsc -p tsconfig.cjs.json && rollup -c"
+    "build": "tsup"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.5",
-    "@babel/preset-env": "^7.23.5",
-    "@babel/preset-typescript": "^7.23.3",
-    "@microsoft/api-extractor": "^7.39.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
+    "@swc/core": "^1.3.102",
     "@types/node": "^20.10.3",
-    "chalk": "^5.3.0",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.6.1",
-    "rollup-plugin-dts": "^6.1.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2"
   },
-  "dependencies": {
-    "@byted-apaas/server-sdk-node": "^1.1.14"
+  "peerDependencies": {
+    "@byted-apaas/baas-sdk-node": "*",
+    "@byted-apaas/faas-sdk-node": "*",
+    "@byted-apaas/server-common-node": "*",
+    "@byted-apaas/server-sdk-node": "*"
   }
 }
