--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "apaas"
   ],
   "scripts": {
-    "build": "tsup"
+    "build": "cp -r ./README.md ./packages/lib & tsup",
+    "docs:dev": "pnpm --filter docs dev",
+    "docs:start": "pnpm --filter docs dev",
+    "docs:build": "pnpm --filter docs build",
+    "docs:preview": "pnpm --filter docs preview",
+    "docs:astro": "pnpm --filter docs astro",
+    "push": "cp -r ./README.md ./packages/lib && pnpm --filter byted-apaas-utils npm publish"
   },
   "author": "",
   "license": "ISC",
@@ -26,12 +32,8 @@
     "@swc/core": "^1.3.102",
     "@types/node": "^20.10.3",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.2"
-  },
-  "peerDependencies": {
-    "@byted-apaas/baas-sdk-node": "*",
-    "@byted-apaas/faas-sdk-node": "*",
-    "@byted-apaas/server-common-node": "*",
-    "@byted-apaas/server-sdk-node": "*"
+    "typescript": "^5.3.3",
+    "docs": "workspace:*",
+    "byted-apaas-utils": "workspace:*"
   }
 }
