--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/starlight": "^0.15.2",
+    "@astrojs/starlight-docsearch": "^0.1.0",
     "astro": "^4.0.1",
     "sharp": "^0.32.5"
   }
